// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > getReviewRoles > audit > expected call 1`] = `
[
  {
    "id": "my-role-125",
    "name": "Reviewer",
    "short": "reviewer",
  },
]
`;

exports[`routes > review > getReviewRoles > returns review roles 1`] = `
{
  "reviewRoles": [
    {
      "id": "my-role-125",
      "name": "Reviewer",
      "short": "reviewer",
    },
  ],
}
`;
